--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^1.4.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@supabase/supabase-js": "^1.7.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "serve-favicon": "^2.5.0",
+    "supabase": "^0.3.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
